# src/libs/core-api/api/api/auth-api.ts
@@ -22,6 +22,8 @@ import { DUMMY_BASE_URL, assertParamExists, setApiKeyToObject, setBasicAuthToObj
 // @ts-ignore
 import { BASE_PATH, COLLECTION_FORMATS, RequestArgs, BaseAPI, RequiredError } from '../base';
 // @ts-ignore
+import { ErrorResponse } from '../model';
+// @ts-ignore
 import { LoginRequest } from '../model';
 // @ts-ignore
 import { SignUpRequest } from '../model';
