# src/libs/core-api/api/model/channel-permission-projection.ts
@@ -1,0 +1,53 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BlockInfrastructure-Core
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import { ChannelPermissionType } from './channel-permission-type';
+
+/**
+ * 
+ * @export
+ * @interface ChannelPermissionProjection
+ */
+export interface ChannelPermissionProjection {
+    /**
+     * 사용자 ID
+     * @type {string}
+     * @memberof ChannelPermissionProjection
+     */
+    'userId': string;
+    /**
+     * 사용자가 소속되어 있는 Channel ID
+     * @type {string}
+     * @memberof ChannelPermissionProjection
+     */
+    'channelId': string;
+    /**
+     * 
+     * @type {ChannelPermissionType}
+     * @memberof ChannelPermissionProjection
+     */
+    'channelPermissionType': ChannelPermissionType;
+    /**
+     * 권한이 추가된 시작
+     * @type {string}
+     * @memberof ChannelPermissionProjection
+     */
+    'createdAt': string;
+}
+
+
+
