# src/libs/core-api/api/model/index.ts
@@ -1,5 +1,10 @@
+export * from './channel-permission-projection';
+export * from './channel-permission-type';
+export * from './create-channel-request';
 export * from './credential-provider';
+export * from './error-response';
 export * from './login-request';
 export * from './login-result';
+export * from './me-response';
 export * from './sign-up-request';
 export * from './token-response';
