# src/libs/core-api/api/model/me-response.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BlockInfrastructure-Core
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import { ChannelPermissionProjection } from './channel-permission-projection';
+
+/**
+ * 
+ * @export
+ * @interface MeResponse
+ */
+export interface MeResponse {
+    /**
+     * 사용자 Unique ID
+     * @type {string}
+     * @memberof MeResponse
+     */
+    'userId': string;
+    /**
+     * 사용자 이름(닉네임)
+     * @type {string}
+     * @memberof MeResponse
+     */
+    'name': string;
+    /**
+     * 사용자 이메일
+     * @type {string}
+     * @memberof MeResponse
+     */
+    'email': string;
+    /**
+     * Optional, 사용자 프로필 이미지
+     * @type {string}
+     * @memberof MeResponse
+     */
+    'profilePictureImageUrl'?: string | null;
+    /**
+     * 사용자가 속한 채널의 권한 리스트
+     * @type {Array<ChannelPermissionProjection>}
+     * @memberof MeResponse
+     */
+    'channelPermissionList': Array<ChannelPermissionProjection>;
+}
+
